<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>wtf.java9</groupId>
	<artifactId>noto-sans</artifactId>
	<version>1.0-SNAPSHOT</version>

	<parent>
		<groupId>wtf.java9</groupId>
		<artifactId>seriously-wtf</artifactId>
		<version>1.0-SNAPSHOT</version>
		<relativePath>../pom.xml</relativePath>
	</parent>

	<profiles>
		<!-- JAVA 9 -->
		<profile>
			<id>java-9</id>
			<activation>
				<jdk>9</jdk>
			</activation>
			<properties>
				<java>java9</java>
				<javac>javac9</javac>
			</properties>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<version>3.6.1</version>
						<configuration>
							<source>9</source>
							<target>9</target>
							<fork>true</fork>
							<executable>${javac}</executable>
							<compilerArgs>
								<arg>--add-exports</arg><arg>java.desktop/sun.font=ALL-UNNAMED</arg>
							</compilerArgs>
						</configuration>
					</plugin>
					<plugin>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>2.19</version>
						<configuration>
							<argLine>
								--add-opens java.desktop/sun.font=ALL-UNNAMED
							</argLine>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

</project>
